// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render few expenses summery currectly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      View 
      <span>
        3
      </span>
       
      expenses
       totaling 
      <span>
        $290.00
         
      </span>
       
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render one expense summery currectly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      View 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $290.00
         
      </span>
       
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
